# SnowVisualizer

./: CMakeLists.txt  README.md  main.cpp
include/glm/: CMakeLists.txt
sample/: Plane.hpp  Sphere.hpp  sample.cpp
snow/: SnowBuilder.hpp  SnowBuilderData.hpp  SnowConstants.hpp  SnowGenerator.hpp  SnowGeneratorData.hpp  SnowGeneratorExperimentation.hpp  SnowRenderer.hpp
util/: Axes.hpp  CameraControls.hpp  Constants.hpp  GlobeCamera.hpp  Shader.hpp  Sphere.hpp  Util.hpp  shader.hpp
